--- a/static/change.html
+++ b/static/change.html
@@ -237,9 +237,10 @@
 			setTimeout(check, checkTime);
 			return;
 		}
-		//finalize(edit, value, getCursor(textarea));
+		console.log('this   ', JSON.stringify(edit));
+		finalize(edit, value, getCursor(textarea));
+		console.log('becomes', JSON.stringify(edit));
 		console.log(value + ' vs ' + text);
-		console.log(JSON.stringify(edit));
 
 		var reversed = reverseEditPath(edit, value, text);
 		history[editNumber] = {reversed:reversed, normal:edit, hash:hashString(text), val:text};
