--- a/static/change.html
+++ b/static/change.html
@@ -238,8 +238,8 @@
 			return;
 		}
 		console.log('this   ', JSON.stringify(edit));
-		finalize(edit, value, getCursor(textarea));
-		console.log('becomes', JSON.stringify(edit));
+		//finalize(edit, value, getCursor(textarea));
+		//console.log('becomes', JSON.stringify(edit));
 		console.log(value + ' vs ' + text);
 
 		var reversed = reverseEditPath(edit, value, text);
