--- a/static/test.html
+++ b/static/test.html
@@ -1,4 +1,7 @@
-<p id="test"></p>
+<div id="textarea" style="font-size:14px; width: 80%; height: 100%; margin-left:10%; background-color: lightblue; padding: 10px;" contenteditable=true></div>
 
-
-<script src="/change.js"></script>
+<script src="/libs/change.js"></script>
+<script src="/libs/socket.io-1.2.0.js"></script>
+<script src="/libs/util.js"></script>
+<script src="/libs/jquery.min.js"></script>
+<script src="/libs/valueStore.js"></script>
