--- a/static/change.html
+++ b/static/change.html
@@ -292,8 +292,8 @@
 		if (!correct) {
 			//console.error('incorrect');
 			var p = getCursor(textarea);
-			// console.log(JSON.stringify(p));
-			// console.log(textarea.innerHTML);
+			console.log(JSON.stringify(p));
+			console.log(textarea.innerHTML);
 			
 			setText(text, textarea, localColors);
 			lastSetText = text;
